--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 Events
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">2020 Virtual Conference</a>
+                <a class="dropdown-item" href="conference.html">2020 Virtual Conference</a>
                 <a class="dropdown-item" href="#">Upcoming Events</a>
                 <a class="dropdown-item" href="#">Past Conferences</a>
               </div>
