--- a/index.html
+++ b/index.html
@@ -17,39 +17,43 @@
   <body class="d-flex flex-column h-100">
     <header>
       <!-- Fixed navbar -->
-      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-        <a class="navbar-brand" href="index.html"><img class="logo" src="img/logo.png" alt="NACRO logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Membership</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Events</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Resources</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#"><button class="btn btn-outline-dark my-2 my-sm-0">Join Now</button></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#"><button class="btn btn-outline-dark my-2 my-sm-0">Login</button></a>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li> -->
-          </ul>
-          <!-- <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form> -->
+      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light d-flex justify-content-between">
+        <div>
+          <a class="navbar-brand" href="index.html"><img class="logo" src="img/logo.png" alt="NACRO logo"></a>
+        </div>
+        <div>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Membership</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Events</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Resources</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#"><button class="btn btn-outline-dark my-2 my-sm-0">Join Now</button></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#"><button class="btn btn-outline-dark my-2 my-sm-0">Login</button></a>
+              </li>
+              <!-- <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li> -->
+            </ul>
+            <!-- <form class="form-inline mt-2 mt-md-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form> -->
+          </div>
         </div>
       </nav>
     </header>
@@ -58,28 +62,238 @@
     <main role="main" class="flex-shrink-0">
       <div class="container w-100">
 
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselImages" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselImages" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselImages" data-slide-to="1"></li>
+            <li data-target="#carouselImages" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="img/home_carousel1.png" alt="First slide">
+              <img class="d-block w-100" src="img/home_carousel1.png" alt="First slide image">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/home_carousel2.png" alt="Second slide">
+              <img class="d-block w-100" src="img/home_carousel2.png" alt="Second slide image">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="img/home_carousel3.png" alt="Third slide">
+              <img class="d-block w-100" src="img/home_carousel3.png" alt="Third slide image">
             </div>
           </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#carouselImages" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#carouselImages" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+        <hr>
+
+        <h1>Highlights</h1>
+        <div id="carouselHighlights" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselHighlights" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselHighlights" data-slide-to="1"></li>
+            <li data-target="#carouselHighlights" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md d-flex justify-content-center">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md d-flex justify-content-center">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md d-flex justify-content-center">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-1"></div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md d-flex justify-content-center">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md d-flex justify-content-center">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md d-flex justify-content-center">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-1"></div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md d-flex justify-content-center">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md d-flex justify-content-center">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md d-flex justify-content-center">
+                  <div class="card mb-4 shadow-sm">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                      <h5 class="card-title">Card title</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-1"></div>
+              </div>
+            </div>
+            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+          </div>
+          <a class="carousel-control-prev" href="#carouselHighlights" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselHighlights" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+        <hr>
+
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="card">
+                <div class="card-body">
+                  <h1 class="card-title text-center">Join. Connect. Grow.</h1>
+                  <p class="card-text text-center">
+                    NACRO is a network of U.S. and international corporate relations professionals that is dedicated to providing professional development opportunities and sharing best
+                    practices for members to develop and advance comprehensive, mutually beneficial relationships with industry. Founded in 2007, NACRO has grown to more than 500 individual members.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <hr>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-7">
+              <img class="w-100" src="img/nacro_conference.png" alt="Conference image">
+            </div>
+            <div class="col-lg-1"></div>
+            <div class="col-lg-4">
+              <div class="card">
+                <div class="card-body">
+                  <h2 class="card-title text-center">Our Annual Conference</h2>
+                  <br/><br/><br/>
+                  <p class="card-text">Join NACRO for our annual conference to network and learn from other corporate relations professionals, build a holistic corporate relations “blueprint," and take part in our Mastery Series!</p>
+                  <br/><br/>
+                  <p class="card-text"><a href="conference.html">Learn more >></a></p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <hr>
+
+        <div id="carouselInsights" class="carousel slide" data-ride="carousel">
+          <h2 class="text-center">Member Insights</h2>
+          <br/>
+          <ol class="carousel-indicators">
+            <li data-target="#carouselInsights" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselInsights" data-slide-to="1"></li>
+            <li data-target="#carouselInsights" data-slide-to="2"></li>
+            <li data-target="#carouselInsights" data-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <p class="text-center">"In the two years I've been part of NACRO, I have been able to network with colleagues at universities and within industry nationwide to be more effective and strategic in developing partnerships."</p>
+              <p class="text-center">Cameron Sprock, The University of Texas at Dallas</p>
+            </div>
+            <div class="carousel-item">
+              <p class="text-center">"Involvement in the organizing of NACRO’s Corporate Engagement Bootcamp and annual conferences has helped me develop event planning skills to run more efficient and effective campus visits from corporate partners."</p>
+              <p class="text-center">Heath Wood, Georgia State University</p>
+            </div>
+            <div class="carousel-item">
+              <p class="text-center">"Coming from industry into academic corporate relations, NACRO has provided me with the ability to network and understand how peers at other institutions work most effectively in this profession."</p>
+              <p class="text-center">Lenna Cominos, Carnegie Mellon University</p>
+            </div>
+            <div class="carousel-item">
+              <p class="text-center">"NACRO is a wonderful place to find the information needed to help build the case for change with your leadership."</p>
+              <p class="text-center">Roger Vanhoy, University of Illinois</p>
+            </div>
+            <br/><br/><br/><br/><br/><br/>
+          </div>
+          <a class="carousel-control-prev" href="#carouselInsights" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselInsights" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
@@ -90,7 +304,7 @@
 
     <footer class="footer mt-auto py-3">
       <div class="container">
-        <span class="text-muted">
+        <span class="text-muted d-lg-flex justify-content-lg-center">
           &copy; Copyright NACRO 2020 &emsp;&emsp; 
           <a href="https://www.linkedin.com/groups/125703"><img class="footer-logo" src="img/linkedin.png" alt="LinkedIn"></a> &emsp;&emsp; 
           <a href="https://www.facebook.com/NACROCON/"><img class="footer-logo" src="img/facebook.png" alt="Facebook"></a> &emsp;&emsp; 
