Replaced images for highlights, some extra styling

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">About &emsp;</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Membership</a>
+                <a class="nav-link" href="#">Membership &emsp;</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Events</a>
+                <a class="nav-link" href="#">Events &emsp;</a>
               </li>
               <li class="nav-item active">
-                <a class="nav-link" href="#">Resources</a>
+                <a class="nav-link" href="#">Resources &emsp;</a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="#"><button class="btn btn-outline-dark my-2 my-sm-0">Join Now</button></a>
@@ -62,20 +62,20 @@
     <main role="main" class="flex-shrink-0">
       <div class="container w-100">
 
-        <div id="carouselImages" class="carousel slide" data-ride="carousel">
+        <div id="carouselImages" class="carousel slide carousel-fade" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselImages" data-slide-to="0" class="active"></li>
             <li data-target="#carouselImages" data-slide-to="1"></li>
             <li data-target="#carouselImages" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" data-interval="5000">
               <img class="d-block w-100" src="img/home_carousel1.png" alt="First slide image">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-interval="5000">
               <img class="d-block w-100" src="img/home_carousel2.png" alt="Second slide image">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-interval="5000">
               <img class="d-block w-100" src="img/home_carousel3.png" alt="Third slide image">
             </div>
           </div>
@@ -104,31 +104,25 @@
                 <div class="col-md-1"></div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/highlight1.png" alt="Card image">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Webinar: Corporate Engagement Collaborations between Advancement & Career Services</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/highlight2.png" alt="Card image">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Spotlight:<br/> Aimee Ahmed</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/highlight3.png" alt="Card image">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Member Meet Up: Tips and tricks for gathering data for Gold Standards Survey</a></h6>
                     </div>
                   </div>
                 </div>
@@ -271,23 +265,47 @@
             <li data-target="#carouselInsights" data-slide-to="3"></li>
           </ol>
           <div class="carousel-inner">
-            <div class="carousel-item active">
-              <p class="text-center">"In the two years I've been part of NACRO, I have been able to network with colleagues at universities and within industry nationwide to be more effective and strategic in developing partnerships."</p>
-              <p class="text-center">Cameron Sprock, The University of Texas at Dallas</p>
+            <div class="carousel-item active" data-interval="4000">
+              <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg">
+                  <p class="text-center">"In the two years I've been part of NACRO, I have been able to network with colleagues at universities and within industry nationwide to be more effective and strategic in developing partnerships."</p>
+                  <p class="text-center">Cameron Sprock, The University of Texas at Dallas</p>
+                </div>
+                <div class="col-lg-2"></div>
+              </div>
             </div>
-            <div class="carousel-item">
-              <p class="text-center">"Involvement in the organizing of NACRO’s Corporate Engagement Bootcamp and annual conferences has helped me develop event planning skills to run more efficient and effective campus visits from corporate partners."</p>
-              <p class="text-center">Heath Wood, Georgia State University</p>
+            <div class="carousel-item" data-interval="4000">
+              <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg">
+                  <p class="text-center">"Involvement in the organizing of NACRO’s Corporate Engagement Bootcamp and annual conferences has helped me develop event planning skills to run more efficient and effective campus visits from corporate partners."</p>
+                  <p class="text-center">Heath Wood, Georgia State University</p>
+                </div>
+                <div class="col-lg-2"></div>
+              </div>
             </div>
-            <div class="carousel-item">
-              <p class="text-center">"Coming from industry into academic corporate relations, NACRO has provided me with the ability to network and understand how peers at other institutions work most effectively in this profession."</p>
-              <p class="text-center">Lenna Cominos, Carnegie Mellon University</p>
+            <div class="carousel-item" data-interval="4000">
+              <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg">
+                  <p class="text-center">"Coming from industry into academic corporate relations, NACRO has provided me with the ability to network and understand how peers at other institutions work most effectively in this profession."</p>
+                  <p class="text-center">Lenna Cominos, Carnegie Mellon University</p>
+                </div>
+                <div class="col-lg-2"></div>
+              </div>
             </div>
-            <div class="carousel-item">
-              <p class="text-center">"NACRO is a wonderful place to find the information needed to help build the case for change with your leadership."</p>
-              <p class="text-center">Roger Vanhoy, University of Illinois</p>
+            <div class="carousel-item" data-interval="4000">
+              <div class="row">
+                <div class="col-lg-2"></div>
+                <div class="col-lg">
+                  <p class="text-center">"NACRO is a wonderful place to find the information needed to help build the case for change with your leadership."</p>
+                  <p class="text-center">Roger Vanhoy, University of Illinois</p>
+                </div>
+                <div class="col-lg-2"></div>
+              </div>
             </div>
-            <br/><br/><br/><br/><br/><br/>
+            <br/><br/><br/><br/><br/><br/><br/>
           </div>
           <a class="carousel-control-prev" href="#carouselInsights" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
