other highlights placeholders

--- a/index.html
+++ b/index.html
@@ -134,31 +134,25 @@
                 <div class="col-md-1"></div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
                   </div>
                 </div>
@@ -170,31 +164,25 @@
                 <div class="col-md-1"></div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
                   </div>
                 </div>
                 <div class="col-md d-flex justify-content-center">
                   <div class="card mb-4 shadow-sm">
-                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <img class="card-img-top" src="img/image_placeholder.png" alt="Card image">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <h6 class="card-title text-center"><a class="highlight-title" href="#">Other Highlights Here</a></h6>
                     </div>
                   </div>
                 </div>
