--- a/conference.html
+++ b/conference.html
@@ -313,7 +313,7 @@
 
     <footer class="footer mt-auto py-3">
       <div class="container">
-        <span class="text-muted">
+        <span class="text-muted d-lg-flex justify-content-lg-center">
           &copy; Copyright NACRO 2020 &emsp;&emsp; 
           <a href="https://www.linkedin.com/groups/125703"><img class="footer-logo" src="img/linkedin.png" alt="LinkedIn"></a> &emsp;&emsp; 
           <a href="https://www.facebook.com/NACROCON/"><img class="footer-logo" src="img/facebook.png" alt="Facebook"></a> &emsp;&emsp; 
