--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/home.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=East+Sea+Dokdo&display=swap" rel="stylesheet">
   </head>
 
   <body class="d-flex flex-column h-100">
