--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/wbv5ymt.css">
   </head>
 
   <body class="d-flex flex-column h-100">
